Fix loading annotations and load them in the right order

BUG:434244